2006-04-14   Rupert Germann  <rupi@gmx.li>

	* fix for the fix from bug 2868: the adminpanel didn't transfer the page id correctly when realUrl was used

2006-04-14  Bernhard Kraft  <kraftb@kraftb.at>

	* Added a hook in tslib_content for userdefined cObjects
	* Fixed bug #3232: Use image format set via .format for GIFBUILDER images

2006-04-13  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fix bugtracker issue 3172: re-write getMimeType in t3lib_htmlmail
	* Fix bugtracker issue 3051: RTE removes images under special conditions when saving

2006-04-12  Ingmar Schlecht <ingmar@typo3.org>

	* Fixed bug #3174: chr() was misspelled char() in t3lib_div
	* Fixed bug #3233: Some broken references to media/ fixed

2006-04-12  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fix bugtracker issue 3172: MIME type determination crashing (HEAD request)

2006-04-10  Michael Stucki  <michael@typo3.org>

	* Merging all changes from TYPO3_4-0 branch back into HEAD

2006-04-07  Michael Stucki  <michael@typo3.org>

	* Release of TYPO3 4.0

2006-04-06  Michael Stucki  <michael@typo3.org>

	* !!! Fixed bug #3151: $TYPO3_CONF_VARS[im_jpg_quality] was changed to $TYPO3_CONF_VARS[jpg_quality] some time ago except in one place. Three questions marks since this was changed some time ago but not mentioned in here.
	* !!! Remove hardcoded linebreak after radio elements. Notice that this will affect your template when in "accessibility" mode with $TYPO3_CONF_VARS[SYS][compat_version] lower than 4.0.
	* Fixed bug #2485: Duplicate fieldset definition for radio elements. Thanks to Ernesto Baschny for providing a fix for this.
	* Minor changes to Indexed Search, see local ChangeLog for details
	* Prevented path traversal (../) in t3lib_tstemplate::getFileName(). This is was never really a security issue, because it affected only paths set in TypoScript which only full TYPO3 admins have access to anyway. Thanks to Ingmar for providing a fix.

